--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
 
@@ -41,12 +43,28 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
-    <div class="container d-flex align-items-center">
+    <div class="top-header">
+      <div class="container">
+        <div class="row d-flex align-items-center justify-content-evenly">
+          <div class="col-md-4 text-center">
+            <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
+          </div>
+          <div class="col-md-4 text-center">
+            <img class="img-fluid" height="80" src="assets/img/logo/aflaxdigitalsignagelogowhite.png">
+          </div>
+          <div class="col-md-4 text-center">
+            <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
+    <div class="container d-flex justify-content-center">
 
       <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
             Digital</span><span class="green"> Signage</span> </a></h1> -->
-      <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1>
+      <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -260,7 +278,7 @@
     </section><!-- End Features Section -->
 
     <!-- ======= How it works Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about white-smoke">
       <div class="container">
 
         <div class="row content">
@@ -421,7 +439,7 @@
     <br>
     <br>
     <!-- ======= About Digital Signage Section ======= -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide white-smoke" data-bs-ride="carousel">
 
       <div class="carousel-inner">
 
@@ -512,7 +530,7 @@
     <!-- End Digital Signage Section Section -->
 
     <!-- ======= Start Features Section ======= -->
-    <div class="feature">
+    <div class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
           <h2>FEATURES</h2>
@@ -607,7 +625,7 @@
 
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio white-smoke">
       <div class="container">
 
         <div class="row">
@@ -806,7 +824,7 @@
 
 
     <!-- ======= Start Industries Section ======= -->
-    <div class="feature">
+    <div class="feature mt-5">
       <div class="container">
         <div class="row content text-center">
           <h2>INDUSTRIES</h2>
@@ -1177,9 +1195,7 @@
     </section>End Portfolio Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients section-bg">
-      <br>
-      <br>
+    <section id="clients" class="clients section-bg white-smoke">
       <br>
       <br>
       <div class="container">
