--- a/restaurants.html
+++ b/restaurants.html
@@ -95,21 +95,27 @@
     <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
       <div class="container d-flex justify-content-center">
 
+        <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
+            Digital</span><span class="green"> Signage</span> </a></h1> -->
+        <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
         <nav id="navbar" class="navbar">
           <ul>
+            <!-- <li><a href="index.html" class="active">Home</a></li> -->
+
             <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
 
-                <li><a href="about.html">Welcome/About </a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">What we do</a></li>
-                <li><a href="#">Customers/Our work</a></li>
-                <li><a href="#">Solutions/ Industries</a></li>
-                <li><a href="#">Contents Editing</a></li>
-                <li><a href="#">Screens / Players
-                    Ready to learn more / Contact us
-                  </a></li>
+                <li><a href="#aboutus">Welcome/About </a></li>
+                <li><a href="#howItWorks">How it works</a></li>
+                <li><a href="#whatWeDo">What we do</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#ourWork">Our work</a></li>
+                <li><a href="#industries">Solutions/Industries</a></li>
+                <li><a href="#customers">Our Customers</a></li>
+                <li><a href="#contactUs">Contact Us</a></li>
               </ul>
             </li>
 
@@ -125,7 +131,7 @@
                 <li><a href="hospitals.html">Hospitals</a></li>
                 <li><a href="car-show.html">Car Show </a></li>
                 <li><a href="gym.html">Gym / Fitness Centres</a></li>
-                <li><a href="#">Airport</a></li>
+                <li><a href="airport.html">Airport</a></li>
                 <li><a href="event-places.html">Event places </a></li>
                 <li><a href="government-institutions.html">Government institutions </a></li>
                 <li><a href="stadium.html">Stadium's</a></li>
@@ -149,10 +155,10 @@
                 <li><a href="bus-shelter.html">Bus Shelter</a></li>
               </ul>
             </li>
-            <li><a href="#">Case Studies</a></li>
-            <li><a href="#">Rentals</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="advertising-with-us.html">Advertise With Us</a></li>
+            <li><a href="rental.html">Rentals</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -403,7 +409,7 @@
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients sky-blue mt-5">
       <div class="container">
-        <h2 class="text-danger fw-bold">CUSTOMERS</h2>
+        <h2 class="text-danger fw-bold">OUR CUSTOMERS</h2>
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
@@ -432,9 +438,92 @@
         </div>
 
       </div>
-    </section>
-    <!-- End Clients Section -->
+    </section><!-- End Clients Section -->
 
+    <!-- ======= Start Features Section ======= -->
+    <!-- <section class="products p-0 mt-5">
+      <div class="container">
+        <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Product for Retail Industry</h2>
+        <div class="row mt-3">
+          <div class="col-md-3">
+            <a href="indoor-lcd-display.html">
+              <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Indoor LCD Display</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lcd-video-wall.html">
+              <img src="assets/img/LCD-Video-Wall/2.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LCD Video Wall</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lcd-advertising-display.html">
+              <img src="assets/img/LCD-Advertising-Display/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LCD Advertising Display</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="outdoor-lcd-display.html">
+              <img src="assets/img/Outdoor-LCD-Display/2.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Outdoor LCD Display</b></p>
+            </a>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-md-3">
+            <a href="advertising-light-box.html">
+              <img src="assets/img/Advertising-Light-Box/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Advertising Lightbox</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="frontlit-billboard.html">
+              <img src="assets/img/frontlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Frontlit Billboard</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="backlit-billboard.html">
+              <img src="assets/img/backlit-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Backlit Billboard</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="led-screen-billboard.html">
+              <img src="assets/img/LED-Screen-Billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>LED Screen Billboard</b></p>
+            </a>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-md-3">
+            <a href="scrolling-billboard.html">
+              <img src="assets/img/scrolling-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Scrolling Billboard</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="scrolling-lightbox.html">
+              <img src="assets/img/Scrolling-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Scrolling Lightbox</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lamp-pole-lightbox.html">
+              <img src="assets/img/Lamp-Pole-Lightbox/1A.jpg" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Lamp Pole Lightbox</b></p>
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="lamp-pole-display.html">
+              <img src="assets/img/Lamp-Pole-Display/tgg.png" alt="" class="img-fluid border border-dark">
+              <p class="text-center text-dark"><b>Lamp Pole Display</b></p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section> -->
     <div class="container">
       <br>
       <h2 class="text-center text-uppercase text-danger fw-bold">Suggested Products
@@ -557,68 +646,70 @@
 
         </div>
       </div>
-    </div <!--=======Contact Section=======-->
-    <section id="contact" class="contact white-smoke">
+    </div>
+    <!-- End Features Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact" style="margin-top: 0; padding-top: 2%;">
+      <h2 class="text-center"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
       <div class="container">
-        <h2 class="text-center"><b><span class="red">CONTACT US TODAY</span></b></h2>
-        <h6 class="text-center text-primary"><b> Our current happy users started here...</b></h6>
-        <h2 class="text-center"><b>Book An Online Demo</b></h2>
         <!-- <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
         </div> -->
 
-        <div class="row mt-5">
+        <div class="row">
 
           <div class="col-lg-4">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4 class="text-white">Location:</h4>
+                <p class="text-white">A108 Adam Street, New York, NY 535022</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4 class="text-white">Email:</h4>
+                <p class="text-white">info@aflaxdigitalsignage.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4 class="text-white">Call:</h4>
+                <p class="text-white">+1 5589 55488 55s</p>
               </div>
 
             </div>
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0 white-smoke">
+          <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form white-smoke">
+            <form method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
+                  <input type="text" name="first_name" class="form-control" id="first_name"
+                    placeholder="Your First Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Last Name" required>
+                  <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Your Last Name"
+                    required>
                 </div>
               </div>
               <div class="row mt-3">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Email" required>
+                  <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
                 </div>
                 <div class="col-md-6 form-group mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Phone" required>
+                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone" required>
                 </div>
               </div>
               <div class="row mt-3">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Organization" required>
+                <div class="col-md-12 form-group">
+                  <input type="text" name="organization" class="form-control" id="organization"
+                    placeholder="Organization" required>
                 </div>
-                <div class="col-md-6 form-group mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Delivery Day" required>
-                </div>
+
               </div>
               <!-- <div class="form-group mt-3">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
@@ -631,7 +722,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Submit Demo Request</button></div>
+              <div class="text-center"><button class="btn btn-light">Submit</button></div>
             </form>
 
           </div>
@@ -652,12 +743,12 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Aflax Digital Signage</h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Email:</strong> info@aflaxdigitalsignage.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -672,33 +763,45 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="advertising-with-us.html">Advertise With Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="rental.html">Rental</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Industries</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="retail.html">Retail</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="restaurants.html">Bar / Restaurants</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="hotels.html">Hotels</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="education.html">Education</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="bank.html">Bank</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Products</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="lcd-video-wall.html">LCD Video Wall</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="lcd-advertising-display.html">LCD Advertising Display</a>
+              </li>
+              <li><i class="bx bx-chevron-right"></i> <a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="advertising-light-box.html">Advertising Light Box</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -706,14 +809,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>AFLAX DIGITAL SIGNAGE</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://abusalehfaysal.github.io/">Abu Saleh Faysal</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -754,7 +857,6 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-
   <script src="assets/aos/aos.js"></script>
   <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 
